# NVR

./: .gitignore  .gitmodules  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  bower.json  config.status  configure  configure.ac  display.cc  display.h  i18n.cc  i18n.h  main.c  main.cc  menu.c  menu.h  menu.xml  nvr.exe.stackdump  osd.cc  osd.h  remote.cc  remote.h  tools.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
bower_components/Cpp-Mplayer-Wrapper/: .bower.json
bower_components/tinyxml_2_6_2/: .bower.json
bower_components/tinyxpath_1_3_1/: .bower.json  Makefile  Makefile.in  config.status  configure
bower_components/tinyxpath_1_3_1/.deps/: action_store.Po  htmlutil.Po  lex_util.Po  main.Po  node_set.Po  tinystr.Po  tinyxml.Po  tinyxmlerror.Po  tinyxmlparser.Po  tokenlist.Po  xml_util.Po  xpath_expression.Po  xpath_processor.Po  xpath_stack.Po  xpath_static.Po  xpath_stream.Po  xpath_syntax.Po
bower_components/tinyxpath_1_3_1/autom4te.cache/: output.0  requests  traces.0  traces.1
po/: de_DE.mo  de_DE.po  nvr.pot
